this is way better

--- a/api/endpoints/base.mdx
+++ b/api/endpoints/base.mdx
@@ -90,7 +90,7 @@ import Errors from "@/components/Errors.mdx";
 
 </ResponseExample>
 
-## Response Data
+### Response Data
 
 <ResponseField name="version" type="string">
   The current running version of Ducky.
