--- a/configuration/setup.mdx
+++ b/configuration/setup.mdx
@@ -11,21 +11,21 @@ This page provides the essential configuration options to help you get started q
   All members with the **Manage Server** permission are authorized to use the **`/setup`** command.
 </Warning>
 
-## Prefix
+### Prefix
 
 The **Prefix** determines how prefix-based commands are triggered in your server. You can change it on this page to fit your server's style, or to prevent conflicts with other bot prefixes.
 
-## Disabled Commands
+### Disabled Commands
 
 This option allows you to disable specific Ducky commands you do not want to be available in your server.
 
 To input commands, use the command names without any prefix or slash. For example, to disable the **`/ping`** command, simply input **`ping`**. To disable both the **`/ping`** and **`/say`** commands, input **`ping, say`**.
 
-## Command Blacklists
+### Command Blacklists
 
 This option allows you to blacklist specific channels or roles from interacting with Ducky.
 
-## Permissions
+### Permissions
 
 Configure permission roles to manage what each member can access.
 
@@ -33,11 +33,11 @@ Configure permission roles to manage what each member can access.
   For more detailed information on permissions, see [Permissions](/configuration/permissions).
 </Note>
 
-## Configuration Log Channel
+### Configuration Log Channel
 
 The **Configuration Log Channel** is the channel where Ducky will send a message to when any changes are made to the server's configuration using the **`/setup`** command.
 
-## Wipe Configuration
+### Wipe Configuration
 
 This option allows you to completely **wipe your server's configuration**. This includes all data stored within your server such as punishments, shifts, etc.
 
