--- a/misc/messageeditor.mdx
+++ b/misc/messageeditor.mdx
@@ -6,11 +6,11 @@ tag: "UNPOLISHED"
 
 The message editor is seen across Ducky, and is used to fully customize embeds that are found in Sessions, Welcome Messages, Tickets, and more. You can also create a message with the`/message` command.
 
-## Creating Message
+### Creating Message
 
 Most messages can be created within the configuration of your choice. This is mostly seen as a "Edit Embed" selection. Alternatively, use the command `/message` and get started.
 
-## Editing Content
+### Editing Content
 
 Content is the "base" message for the creator. This can simply be edited using plain text, just like how you type in Discord.
 
@@ -18,11 +18,11 @@ Content is the "base" message for the creator. This can simply be edited using p
   Some types of message editors may not have this option.
 </Note>
 
-## Editing Embeds
+### Editing Embeds
 
 Embeds are a great way to show messages within Discord, and you've probably seen them before. Embeds can be created, deleted, and edited within the Embed Editor.
 
-### Multi Embed Editor
+#### Multi Embed Editor
 
 The multi-embed editor allows you to have multiple embeds within a message.
 
@@ -34,7 +34,7 @@ The multi-embed editor allows you to have multiple embeds within a message.
   Deleting embeds is irreversible, and all data will be permanently lost.
 </Danger>
 
-### Editing Embeds
+#### Editing Embeds
 
 When you create an embed, or edit a pre-existing embed, another menu appears, allowing you to edit the selected embed.
 
@@ -62,19 +62,19 @@ Fields are used to convey a topic within your embed. They contain a title and a 
 **Color**\
 The color is a HEX code, which is displayed along the left side of the embed. HEX codes can be found at https://htmlcolorcodes.com/color-picker
 
-### Variables
+#### Variables
 
 Variables are a way to refrence important information within a message or embed. To view avalible variables, check for a button labeled  <Icon icon="brackets-curly" /> Variables, and copy/paste one of the variables into your message, and when it's ran, that variable will be replaced with data, depending on the variable you chose! For additional information or questions, join [Ducky's Pond](https://duckybot.xyz/invite)!
 
-## Importing / Exporting Messages
+### Importing / Exporting Messages
 
 Importing and exporting messages can be very convenient for sharing embeds with others or copying embeds to others.
 
-### Export Pre-Existing Embed
+#### Export Pre-Existing Embed
 
 To export a pre-existing embed, open the message editor and click "Export Embed" and copy the code given. It should look similar to `ducky_xxxxxxxxxxxx`
 
-### Import into a New Embed
+#### Import into a New Embed
 
 Within a new message editor, click on "Import" and paste the ducky code from the export message.
 
