--- a/modules/DiscordPings.mdx
+++ b/modules/DiscordPings.mdx
@@ -10,21 +10,21 @@ This page provides the essential configuration options for Ducky's **Discord Pin
   All embeds which Ducky may send in this module are customizable, allowing you to better suit your server.
 </Tip>
 
-  ## Module Enabled
+  ### Module Enabled
     This will enable/disable the **Discord Pings** module.
   
-  ## Protected Roles
+  ### Protected Roles
     If a user pings a **Protected Role** the user who pinged will be notified with an embed notifying them that they are not permitted to mention members that has the **Protected Role**.
   
-  ## Whitelisted Roles
+  ### Whitelisted Roles
     Members with the **Whitelisted Roles** can mention members who have a **Protected Role** without being affected by the **Discord Pings** module.
   
-  ## Hierarchy Enabled
+  ### Hierarchy Enabled
     This makes all roles above the configured **Protected Role** also act as a protected role.
   
-  ## Anti Ping Embed
+  ### Anti Ping Embed
     This will automatically be sent by Ducky when a user pings a user with a protected role. This embed is customizable to best fit your needs.
   
-  ## Anti Ghost Ping Embed
+  ### Anti Ghost Ping Embed
     This will be sent by Ducky when a user deletes a message which mentions a user or role. This action is known as "ghost pinging". This embed is customizable to best fit your needs.
   
