--- a/modules/MessageManagement.mdx
+++ b/modules/MessageManagement.mdx
@@ -13,20 +13,20 @@ This page provides the essential configuration options for Ducky’s **Message M
   Ducky provides 3 auto-delete channels for free users. Upgrade to Ducky Plus+ to receive 10 auto-delete message slots.
 </Callout>
 
-## Sticky Messages
+### Sticky Messages
 
 A sticky message is a message that Ducky will send to a set channel. Every time a message in that channel is sent.
 
 Ducky will send your sticky message, and it automatically deletes the last sticky message to keep your channel nice and clear, whilst keeping the stickied message as the first in the channel.
 
-## Autodelete Channels
+### Autodelete Channels
 
 Autodelete channels are also referred to as Auto-Purging. Ducky will automatically delete all messages in a channel after a set amount of time.
 
-## Valuable Messages
+### Valuable Messages
 
 A valuable message is a message Ducky will preserve if they are included in a message purge, and it will give you a prompt asking if you want to purge the message.
 
-## Autoreact Channels
+### Autoreact Channels
 
 Autoreact channels allows Ducky to react to every message sent in a channel. Toggling **react to bots** off means that Ducky will not react to messages sent by bots.
