--- a/modules/ReactionBoards.mdx
+++ b/modules/ReactionBoards.mdx
@@ -9,7 +9,7 @@ This page provides the essential configuration options for Ducky’s **Reaction 
   Ducky provides 1 reaction board for free users. Upgrade to Ducky Plus+ to receive 10 reaction boards.
 </Callout>
 
-## Reaction Type
+### Reaction Type
 
 This is the reaction which users can react to a message with to send it to the board channel. You must set this by reacting to the message Ducky sends when you select this setting.
 
@@ -17,15 +17,15 @@ This is the reaction which users can react to a message with to send it to the b
   You must **react** to the message, you cannot reply to it with your emoji of choice.
 </Warning>
 
-## Reaction Board Channel
+### Reaction Board Channel
 
 This is the channel where all messages are sent once they reach the set reaction target. This can be configured to any **text channel**.
 
-## Amount of Reactions Needed
+### Amount of Reactions Needed
 
 To prevent every message with the configured reaction from going to the reaction board, you must configure how many reactions a message must get to get sent to the reaction board. The number of reactions to be sent can only go from 1 to 100. Once a message reaches the configured number of reactions, it will be automaticaly sent to the reaction board channel.
 
-## Whitelisted Channels
+### Whitelisted Channels
 
 A whitelisted channel is a channel where this reaction board applies. If a message reaches the reaction threshold and it isn't a whitelisted channel, the message will not be sent to your board channel.
 
