--- a/modules/RobloxPunishments.mdx
+++ b/modules/RobloxPunishments.mdx
@@ -6,13 +6,13 @@ tag: "UNPOLISHED"
 
 This page provides the essential configuration options for Ducky's **Roblox Punishments** module, which allows you to manage, track, and log all punishments within your ERLC private server. The module creates a centralized system for organizing in-game moderation actions, ensuring punishments are properly recorded and accessible. To enable and configure this module, use the **`/setup`** command and navigate to the **Roblox Punishments** page.
 
-## Roblox Punishment Logs Channel 
+### Roblox Punishment Logs Channel 
     The **Roblox Punishment Logs Channel** is where all Roblox Punishments issued will be logged.
-## Roblox Punishment Types
+### Roblox Punishment Types
     The **Roblox Punishment Types** function allows you to easily configure different punishments staff members are able to hand out.
 
 <Tip>
     It is recommended to utilize standard punishment types, such as **Warning**, **Kick**, and **Ban**.
 </Tip>
-## Tempban for Moderators
+### Tempban for Moderators
     The **Tempban for Moderators** feature allows you to restrict the maximum duration a Moderator can issue a temporary ban. Leaving this setting empty will remove any limit. For example, if the limit is set to **3 days**, a Moderator attempting to tempban a user for **4 days** will be prevented from doing so.
