--- a/modules/RobloxVerification.mdx
+++ b/modules/RobloxVerification.mdx
@@ -7,10 +7,10 @@ tag: "UNPOLISHED"
 This page provides the essential configuration options for Ducky's **Roblox Verification** module, which allows you to manage and secure player verification within your ERLC private server. The module creates a centralized system for confirming player identities, ensuring that only verified users can access server features. To enable and configure this module, use the **`/setup`** command and navigate to the **Roblox Verification** page.
 
 
-## Verified Nickname
+### Verified Nickname
   **Verified Nicknames** are the nicknames that are assigned to a member once they complete the verification.
 
-  ### Verified Nickname Variables
+  #### Verified Nickname Variables
 
   The Verified Nicknames will change the users username after they've succesfully verified based on your variables.
 
@@ -21,11 +21,11 @@ This page provides the essential configuration options for Ducky's **Roblox Veri
   - `{discord.name}`: The member's Discord display name.
   - `{discord.id}`: The member's Discord ID.
 
-## Verified Roles
+### Verified Roles
 The **Verified Roles** are the roles that are added to a user once they've completed verifcation.
 
-## Unverified Roles
+### Unverified Roles
 The **Unverified Role(s)** are the roles that are being removed once a user has completed the Verification.
 
-## Use Bloxlink
+### Use Bloxlink
 The **Use Bloxlink** feature allows you to use Bloxlink for Verification and not Ducky's Verification. It utilises **Bloxlink's** public API to fetch roblox users without them having to be verified with Ducky..
