--- a/modules/activity.mdx
+++ b/modules/activity.mdx
@@ -7,11 +7,11 @@ iconType: "solid"
 
 This page provides the essential configuration options for Ducky's **Activity Management** module, which provides an easy way to manage and track your staff's activity with LOAs and activity waves. To enable and configure this module, use the **`/setup`** command and navigate to the **Activity Management** page.
 
-## LOAs Enabled
+### LOAs Enabled
 
 The **LOAs Enabled** toggle determines whether or not staff members are able to request an LOA (Leave of Absence) via the **`/loa request`** command.
 
-## LOA Logs Channel
+### LOA Logs Channel
 
 The **LOA Logs Channel** is where all LOA requests and logs will be sent.
 
@@ -19,18 +19,18 @@ The **LOA Logs Channel** is where all LOA requests and logs will be sent.
     Any member with access to this channel is able to approve or deny LOA requests.
 </Warning>
 
-## LOA Role
+### LOA Role
 
 The **LOA Role** is automatically assigned to staff members with an active LOA.
 
-## LOA Nickname
+### LOA Nickname
 
 The **LOA Nickname** is automatically assigned to staff members with an active LOA. The **`{member.name}`** and **`{member.username}`** variables can be used here.
 
-## Max LOA Length
+### Max LOA Length
 
 The **Max LOA Length** is the maximum length of time a staff member can request an LOA for.
 
-## Track Modcalls
+### Track Modcalls
 
 The **Track Modcalls** toggle determines whether or not Ducky will track in-game modcalls. This feature must be enabled for modcall statistics to be available via the **`/modstats view`** command.
