--- a/modules/audit.mdx
+++ b/modules/audit.mdx
@@ -7,15 +7,15 @@ iconType: "solid"
 
 This page provides the essential configuration options for Ducky's **Audit Logging** module, which allows you to monitor and record important server activity, giving staff a clear view of changes and actions taken within your server. To enable and configure this module, use the **`/setup`** command and navigate to the **Audit Logging** page.
 
-## Primary Audit Logs Channel
+### Primary Audit Logs Channel
 
 The **Primary Audit Logs Channel** is where all enabled audit log types will be sent which do not have a designated channel.
 
-## Audit Log Channels
+### Audit Log Channels
 
 **Audit Log Channels** allows logs to be sent to separate channels.
 
-## Audit Log Types
+### Audit Log Types
 
 **Audit Log Types** allows selection as to which audit log types you would like Ducky to log. Each audit log type corresponds to a specific action or event in your server.
 
