--- a/modules/autoresponders.mdx
+++ b/modules/autoresponders.mdx
@@ -9,39 +9,39 @@ description: "Learn about Ducky's Autoresponders module and how to configure it.
   Ducky provides 3 autoresponders for free users. Upgrade to Ducky Plus+ to receive 25 autoresponders.
 </Callout>
 
-## Create New Autoresponder
+### Create New Autoresponder
 
 To create a new autoresponder, run the `/setup` command and navigate to the **Autoresponders** page. Select **Create New Autoresponder** from the dropdown and fill out all required fields.
 
-### Name
+#### Name
 
 Create an easily identifiable **name** for your autoresponder. This name will be shown in your list of autoresponders.
 
-### Trigger
+#### Trigger
 
 The word or phrase a user says to make Ducky respond is called the **trigger**. Your trigger should be short enough so users can easily trigger it, but it should not be so short that it is triggered because the phrase is so common.
 
-### Response
+#### Response
 
 The **response** is what Ducky says when responding to the trigger. You can use text, text and an embed. See the [embed editor guide](/misc/embededitor) for more information on how to customize embeds.
 
-### Required Role
+#### Required Role
 
 When enabled, only users with the **required role** will be responded to. This will make Ducky only respond to the trigger when the message is sent by a user with the required role.
 
-### Case Sensitive
+#### Case Sensitive
 
 **Case-sensitivity** will only respond to a user's message if it has the same capitalization as the trigger. For instance, if your trigger is `Ducky is the best!` and case-sensitivity is **off**, a user sending the message `ducky is the best!` _will_ be responded to. If case-sensitivity is **on**, a user sending that message will _not_ be responded to.
 
-### Check Exact Match
+#### Check Exact Match
 
 When enabled, a user's message much exacly to the trigger. For instance, if the trigger is`Ducky is the best!` and a user sends the message `I love ducky so much, Ducky is the best!` with **Check Exact Match** enabled, then Ducky will not respond. If diabled, Ducky will respond to the message because it contains the trigger.
 
-### Delete Trigger
+#### Delete Trigger
 
 When enabled, the user's message which contains the trigger will be deleted by Ducky when it responds.
 
-### Cooldown
+#### Cooldown
 
 When enabled, a **cooldown** will be placed on how quickly Ducky responds to that trigger. For insance, if someone is spamming the same phrase, Ducky will only respond once in the specificed amount of time.
 
