--- a/modules/erlcintegration.mdx
+++ b/modules/erlcintegration.mdx
@@ -7,7 +7,7 @@ iconType: "solid"
 
 This page provides the essential configuration options for Ducky's **ERLC Integration** module, which enables seamless remote management and monitoring of your ERLC private server. To enable and configure this module, use the **`/setup`** command and navigate to the **ERLC Integration** page.
 
-## In-Game Role
+### In-Game Role
 
 The **In-Game Role** is a role that players within the linked ERLC private server will be granted. This role is added from the member when they join the in-game server, and removed when they leave the in-game server.
 
@@ -15,11 +15,11 @@ The **In-Game Role** is a role that players within the linked ERLC private serve
   The member must have their **Roblox** account linked with Ducky in order for this role to be added/removed from them.
 </Warning>
 
-## ERLC Server
+### ERLC Server
 
 The **ERLC Server** is the linked ERLC private server. You can link your ERLC private server by following the steps outlined [here](/tutorials/linkerlc).
 
-## Advanced Remote Execution Permissions
+### Advanced Remote Execution Permissions
 
 The **Advanced Remote Execution Permissions** toggle determines whether or not your staff team have access to **`/erlc command`**.
 
@@ -27,19 +27,19 @@ When **enabled**, members of the configured **ERLC Staff** roles have access to 
 
 When **disabled**, only members of the configured **ERLC Manager** roles can access **`/erlc command`** with the Co-Owner permission level.
 
-## ERLC Command Logs Channel
+### ERLC Command Logs Channel
 
 The **ERLC Command Logs Channel** is the channel that contains the ERLC Command Logs webhook. This is essential for in-game commands, which can be configured by following the steps outlined [here](/tutorials/ingamecmds).
 
-## ERLC Kick/Ban Logs Channel
+### ERLC Kick/Ban Logs Channel
 
 The **ERLC Kick/Ban Logs Channel** is the channel that contains the ERLC Kick/Ban Logs webhook.
 
-## Auto Log Kicks/BOLOs
+### Auto Log Kicks/BOLOs
 
 The **Auto Log Kicks/BOLOs** toggle determines whether or not Ducky automatically reads logs from the configured **ERLC Kick/Ban Logs Channel** in order to automatically log punishments and/or complete active BOLOs.
 
-## Ban Syncing Mode
+### Ban Syncing Mode
 
 The **Ban Syncing Mode** is the mode that Ducky uses to synchronize bans between the ERLC private server and the Discord server. The available options can be found below:
 
@@ -48,7 +48,7 @@ The **Ban Syncing Mode** is the mode that Ducky uses to synchronize bans between
 - **Both:** Members banned within the Discord server will automatically be banned from the ERLC private server, and players banned within the ERLC private server will automatically be banned from the Discord server.
 - **None:** Ban synchronization will not occur.
 
-## Playtime Rewards
+### Playtime Rewards
 
 The **Playtime Rewards** are roles that are automatically granted to members based on their total playtime within the linked ERLC private server.
 
@@ -58,7 +58,7 @@ The **Playtime Rewards** are roles that are automatically granted to members bas
   The member must have their **Roblox** account linked with Ducky in order for reward roles to be granted.
 </Warning>
 
-## Playtime Reward Announcements Channel
+### Playtime Reward Announcements Channel
 
 The **Playtime Reward Announcements Channel** is the channel that is used to announce when a member has been granted a playtime reward role.
 
