--- a/modules/erlclogs.mdx
+++ b/modules/erlclogs.mdx
@@ -11,17 +11,17 @@ This page provides the essential configuration options for Ducky's **ERLC Server
 You must [link your ERLC private server](/tutorials/linkerlc) to Ducky in order to use this module.
 </Warning>
 
-## Player Join Logs
+### Player Join Logs
     The **Player Join Logs** channel is where a log will be sent when a player joins the in-game server. The log includes the Roblox username, profile hyperlink, and timestamp.
 
-##  Player Leave Logs
+###  Player Leave Logs
     The **Player Leave Logs** channel is where a log will be sent when a player leaves the in-game server. The log includes the Roblox username, profile hyperlink, and timestamp.
 
-## Player Team Logs
+### Player Team Logs
     The **Player Team Logs** channel is where a log will be sent when a player changes their team. The log includes the Roblox username, profile hyperlink, callsign, team joined, and timestamp.
 
-## Player Kill Logs
+### Player Kill Logs
     The **Player Kill Logs** channel is where a log will be sent when a player kills another player within the in-game server. The log includes both player's Roblox username, profile hyperink, and timestamp.
 
-## Modcall Logs
+### Modcall Logs
     The **Modcall Logs** channel is where a log will be sent when a moderator answers a modcall within the in-game server. The log includes both player's Roblox username, profile hyperink, and timestamp.
