--- a/modules/staff.mdx
+++ b/modules/staff.mdx
@@ -7,7 +7,7 @@ iconType: "solid"
 
 This page provides the essential configuration options for Ducky's **Staff Management** module, which provides an easy way to track disciplinary actions taken on your staff members via infractions, as well as issue promotions. To enable and configure this module, use the **`/setup`** command and navigate to the **Staff Management** page.
 
-## Infractions Channel
+### Infractions Channel
 
 The **Infractions Channel** is where all issued infractions are sent. You can issue an infraction via the **`/infraction issue`** command.
 
@@ -15,15 +15,15 @@ The **Infractions Channel** is where all issued infractions are sent. You can is
     The embeds that are sent to the **Infractions Channel** and the member's DMs can be customized by pressing **Edit configuration...** -> **Edit Infraction Issue Embeds**.
 </Note>
 
-## Infraction Thread
+### Infraction Thread
 
 The **Infraction Thread** is the name of the thread that is created on an infraction message. This thread can be used to discuss any information regarding the infraction, add proof, etc.
 
-## Infraction Types
+### Infraction Types
 
 The **Infraction Types** are the different types of infractions that can be issued to your staff members. You can add a role that is automatically given to the staff member when they receive the infraction, automate actions to occur when the staff member receives the infraction, and more.
 
-## Promotions Channel
+### Promotions Channel
 
 The **Promotions Channel** is where all promotions are sent. You can issue a promotion via the **`/promotion issue`** command.
 
@@ -31,11 +31,11 @@ The **Promotions Channel** is where all promotions are sent. You can issue a pro
     The embeds that are sent to the **Promotions Channel** can be customized by pressing **Edit configuration...** -> **Edit Promotion Embeds**.
 </Note>
 
-## Promotion Thread
+### Promotion Thread
 
 The **Promotion Thread** is the name of the thread that is created on a promotion message. This thread can be used to discuss any information regarding the promotion, etc.
 
-## Feedback Channel
+### Feedback Channel
 
 The **Feedback Channel** is where all staff feedback is sent. You can submit feedback on a staff member via the **`/feedback submit`** command.
 
