--- a/modules/suggestions.mdx
+++ b/modules/suggestions.mdx
@@ -5,18 +5,18 @@ description: "Learn about Ducky's Suggestion module and how to configure it."
 
 This page provides the essential configuration options for Ducky's **Suggestion** module, which provides an easy way to track suggestions from the community. To enable and configure this module, use the **`/setup`** command and navigate to the **Suggestions** page.
 
-## Suggestions Channel
+### Suggestions Channel
     The Suggestions Channel is where all suggestions are sent. The channel receives an embed when a member does the **`/suggestion submit`** command.
 
     <Tip>
       The suggestion embeds are customizable to better suit your server.
     </Tip>
 
-## Max Upvotes
+### Max Upvotes
     The Max Upvotes setting will automatically approve a suggesgtion if it has received the configured max amount of upvotes.
 
-## Max Downvotes
+### Max Downvotes
     The Max Downvotes setting will automatically deny a suggestion if it has received the configured max amount of downvotes.
 
-## Suggestion Thread
+### Suggestion Thread
     The Suggestion Thread is an option you can enable. If checked, Ducky will automattically add a thread. This can be used so members can chat in the thread instead of in the channel.
