--- a/modules/tickets.mdx
+++ b/modules/tickets.mdx
@@ -14,15 +14,15 @@ This page provides the essential configuration options for Ducky's **Ticket Modu
   Ducky provides 2 ticket form questions for free users. Upgrade to Ducky Plus+ to receive 5 ticket for questions.
 </Callout>
 
-## Create Ticket Panel
+### Create Ticket Panel
 
 To begin creating your ticket panel, click the dropdown menu and select **Create Panel**. This will open the panel creator
 
-## Channel
+### Channel
 
 The channel selector is the set channel where the ticket panel will be sent. This is where members will interact with you're tickets and create new tickets.
 
-## Embed
+### Embed
 
 The embed selection is the embed that will be displayed in the set channel. You can customize this as you wish.
 
@@ -30,11 +30,11 @@ The embed selection is the embed that will be displayed in the set channel. You 
   Check out the [Message Editor](/misc/messageeditor) documentation for more information.
 </Tip>
 
-## Ticket Subjects
+### Ticket Subjects
 
 The ticket subjects are what the members interact with. These can be fully customized with different Support Roles, Mentionables, Categories, and more.
 
-### Ticket Subject Builder
+#### Ticket Subject Builder
 
 **Name**\
 The name is the name that the ticket subject will be called. This is seen publicly on the ticket embed.
