--- a/overview/welcome.mdx
+++ b/overview/welcome.mdx
@@ -7,7 +7,7 @@ iconType: "solid"
 
 ![Ducky](https://duckybot.xyz/images/banners/footers/Ducky.png)
 
-## About Ducky
+### About Ducky
 **Ducky** is a multipurpose bot focused on seamlessly integrating Discord and ERLC server automation for effortless management developed by [Troptop](https://discord.com/users/598958193032560642) and [bobbibones](https://discord.com/users/782235114858872854) with [Quackscordia](https://github.com/DuckySupport/Quackscordia), a fork of [Discordia](https://github.com/SinisterRectus/Discordia), the Discord API wrapper for **Lua**.
 
 If you find a bug, need support, would like to suggest a feature, want to keep up with updates, check out leaks of upcoming updates, view the bot's status, and more, hop into [Ducky's Pond](https://discord.gg/w2dNr7vuKP).
