--- a/misc/devmode.mdx
+++ b/misc/devmode.mdx
@@ -11,7 +11,7 @@ Discord's **Developer Mode** allows you to access role IDs, channel IDs, message
   You will likely need this <u>enabled</u> upon contacting the **Ducky Support** team for easy reference.
 </Note>
 
-## Desktop
+### Desktop
 
 <Steps>
   <Step title="Open User Settings">
@@ -25,7 +25,7 @@ Discord's **Developer Mode** allows you to access role IDs, channel IDs, message
   </Step>
 </Steps>
 
-## Mobile
+### Mobile
 
 <Steps>
   <Step title="Open Profile">
