--- a/misc/embededitor.mdx
+++ b/misc/embededitor.mdx
@@ -7,9 +7,9 @@ iconType: "solid"
 
 The **Embed Editor** is found throughout many of Ducky's customizable options. It allows you to fully customize embeds, including their title, description, author, footer, fields, color, thumbnail, and image.
 
-## Singular Embed Editor
+### Singular Embed Editor
 
-### Editable Properties
+#### Editable Properties
 
 The following properties of the embed can be edited via the **Edit a property...** dropdown menu:
 
@@ -24,7 +24,7 @@ The following properties of the embed can be edited via the **Edit a property...
 
 ![Embed Editor Example](/images/embededitor/example.png)
 
-### Sharing Embeds
+#### Sharing Embeds
 
 The **Import** and **Export** options on the **Embed Editor** allow you to share your embeds with other users across servers.
 
@@ -34,7 +34,7 @@ Pressing the **Export** button will generate a 31-character code of random combi
   The **Embed Editor** only accepts exportables of the **Embed**, **Embeds**, or **Message** type. You can view an exportable's type via the **`/exportables view`** command.
 </Note>
 
-### History Control
+#### History Control
 
 The **Undo** and **Redo** buttons on the **Embed Editor** allow you to easily undo/redo your changes in the event that you accidentally overwrite a large portion of your embed.
 
@@ -46,17 +46,17 @@ The **Undo** and **Redo** buttons on the **Embed Editor** allow you to easily un
   Using **Undo** then making an edit will clear the redo history.
 </Warning>
 
-### Variables
+#### Variables
 
 The **Variables** button on the **Embed Editor** will not always appear, but when pressed, will show a list of available variables that can be used within your embed. This variable list varies depending on the module you are configuring.
 
-## Multi Embed Editor
+### Multi Embed Editor
 
-### Add/Edit/Remove Embed
+#### Add/Edit/Remove Embed
 
 The **Add/Edit/Remove Embed** options on the **Multi Embed Editor** allow you to edit the embeds within your multiembed group using the **Singular Embed Editor**.
 
-### History Control
+#### History Control
 
 The **Undo** and **Redo** buttons on the **Multi Embed Editor** allow you to easily undo/redo your changes in the event that you accidentally overwrite a large portion of your multiembed group.
 
@@ -68,6 +68,6 @@ The **Undo** and **Redo** buttons on the **Multi Embed Editor** allow you to eas
   Using **Undo** then making an edit will clear the redo history.
 </Warning>
 
-### Variables
+#### Variables
 
 The **Variables** button on the **Multi Embed Editor** will not always appear, but when pressed, will show a list of available variables that can be used within your multiembed group. This variable list varies depending on the module you are configuring.
