--- a/modules/erlcstatus.mdx
+++ b/modules/erlcstatus.mdx
@@ -10,21 +10,21 @@ This page provides the essential configuration options for Ducky's **ERLC Server
   Ducky provides 3 ER:LC server status channels for free users. Upgrade to Ducky Plus+ to receive 6 ER:LC server status channels.
 </Callout>
 
-## Server Status Message
+### Server Status Message
 
-### Channel
+#### Channel
 
 The **Channel** is a configurable setting in the **`/setup`** page, this is where your **ERLC Server Status Message** will be sent.
 
-### Link
+#### Link
 
 The **Link** option is a non-configurable option which just displays a quick-link to your **ERLC Server Status Message**.
 
-### Content
+#### Content
 
 The **Content** setting is where you configure how you want your **ERLC Server Status Message** to look like. You are able to configure the embed and message to your liking.
 
-## Server Status Channels
+### Server Status Channels
 
 With Ducky's **ERLC Server Status** module you are able to configure a variety of status channels to display various types of statistics.\
 To create a status channel, naviage to the **ERLC Server Status** page using the **`/setup`** command and use the dropdown menu and select "Create Server Status Channel". Then you are able to create **3** Server Status Channels, or **6** if you have **Ducky Plus+**. Then using the variables found using the dropdown menu you can make your Server Status Channels display whatever you want!
